# Information-Theoretic-Volume-Renderer

./: .gitignore  CMakeLists.txt  DQN-helper.py  LearningResults.csv  MIVolumeRenderer  Makefile  README.md  SimulationControl.py  ValidationData.csv  volumeRender  volumeRender_kernel.cu
data/: Bucky.raw  Makefile  VolumeWriter.cc  volumewriter
data/Sampling/: FullRun.csv
src/: main.cpp
src/cuda/: CMakeLists.txt  volumeRender_kernel.cu
src/entropy/: CMakeLists.txt  Entropy.cpp  Entropy.h
src/util/: socket.cpp  socket.h
